2022-03-16 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* src/z80/gen.c:
	  Fix access before array.

2022-03-16 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* support/regression/Makefile.in,
	  support/regression/ports/ds390/spec.mk,
	  support/regression/ports/ez80-z80/spec.mk,
	  support/regression/ports/mcs51-common/spec.mk,
	  support/regression/ports/pdk13/spec.mk,
	  support/regression/ports/pdk15/spec.mk,
	  support/regression/ports/pdk15-stack-auto/spec.mk,
	  support/regression/ports/stm8/spec.mk,
	  support/regression/ports/ucz180/spec.mk,
	  support/regression/ports/ucz180-resiy/spec.mk,
	  support/regression/ports/ucz80-nmos/spec.mk,
	  support/regression/ports/ucz80n/spec.mk:
	  Regression test infrastructure improvements, picked from patch #430 by Felix Salfelder (felixs).

2022-03-14 Gabriele Gorla <gorlik@yahoo.com>

	* support/regression/tests/div.c,
	  device/lib/s08/Makefile.in,
	  device/lib/hc08/Makefile.in,
	  device/lib/mos6502/Makefile.in,
	  device/lib/mos65c02/Makefile.in,
  	  device/lib/mos6502-stack-auto/Makefinle.in:
	  Enable div and ldviv for mos6502 and hc08/s08 ports.
	* src/mos6502/gen.c,
	  src/mos6502/main.c:
	  Add support for GETBYTE and GETWORD iCodes.

2022-03-15 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* src/pdk/gen.c,
	  device/lib/lldiv.c:
	  Fix pdk heap corruption on returning large struct.
	* src/stm8/gen.c:
	  Fixes for large struct return.

2022-03-15 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* device/lib/div.c,
	  device/lib/ldiv.c,
	  device/lib/lldiv.c,
	  support/regression/tests/div.c,
	  device/lib/Makefile.in,
	  device/lib/*/Makefile.in:
	  Division functions, RFE #167.

2022-03-15 Benedikt Freisen <b.freisen AT gmx.net>

	* device/include/gcc_attr.h:
	  Compatibility macros for GCC attribute syntax.

2022-03-15 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* src/SDCCsymt.c,